# CodePad

./: .gitignore  CMakeLists.txt  LICENSE  README.md
.cmake/api/v1/reply/: cache-v2-11a55cd5200803186e97.json  cmakeFiles-v1-e96a766ae3ec17c8b628.json  codemodel-v2-3ff7be7209447cfb62db.json  index-2024-12-11T09-38-00-0351.json  target-CodePad-Debug-767b91a12def22c1660d.json  target-glad-Debug-cdf8a8ffbf48b706fc09.json  target-run-Debug-88e854b4cfcf6d19b0e2.json
include/: shaderutils.h
include/glad/: glad.h
resources/shaders/shapes/triangle/: fragment.glsl  vertex.glsl
src/: shaderutils.cpp  window.cpp
src/glad/: glad.c
